--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "start1": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "generate.types": "apollo-codegen introspect-schema schema.graphql --output schema.json",
+    "gg": "gql-gen --schema ./schema.json --template ts --out ./src/app/typings/types.local.d.ts -m ./src/app/unit/shared/**/*.ts",
+    "prestart1": "npm run generate.types",
+    "prebuild1": "npm run generate.types",
+    "generate": "gql-gen",
+    "tt": "apollo-codegen generate **/*.graphql.js --schema schema.json --target typescript --output operation-result-types.ts"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +28,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "apollo-angular": "^1.5.0",
+    "apollo-angular-link-http": "^1.3.1",
+    "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.4.0",
+    "apollo-link": "^1.2.8",
+    "apollo-link-rest": "^0.7.0",
     "core-js": "^2.5.4",
+    "graphql": "^0.13.2",
+    "graphql-anywhere": "^4.1.28",
+    "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -35,7 +51,10 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "apollo-codegen": "^0.20.2",
     "codelyzer": "~4.5.0",
+    "graphql-code-generator": "^0.16.1",
+    "graphql-codegen-typescript-template": "^0.16.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
